--- a/r4a.config
+++ b/r4a.config
@@ -24,3 +24,8 @@ CONFIG_PACKAGE_xray-core=y
 CONFIG_PACKAGE_luci-lib-fs=y
 CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
+
+#============================== LuCI ==============================#
+# Applications
+CONFIG_PACKAGE_luci-app-adbyby-plus=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
