--- a/.github/workflows/xiaomi_r4a.yml
+++ b/.github/workflows/xiaomi_r4a.yml
@@ -27,7 +27,7 @@ env:
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   PATCH_FILE: 476-mtd-spi-nor-add-eon-en25q128.patch
-  UPLOAD_BIN_DIR: true
+  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
   UPLOAD_WETRANSFER: true
