--- a/.github/workflows/xiaomi_r4a.yml
+++ b/.github/workflows/xiaomi_r4a.yml
@@ -172,6 +172,12 @@ jobs:
         #[ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         #[ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_ENV
+        echo $GITHUB_ENV
+
+    - name: Check release tag
+      run: |
+        echo "========> check the release tag"
+        echo $(steps.tag.outputs.status)
 
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v1
