--- a/.github/workflows/xiaomi_r4a.yml
+++ b/.github/workflows/xiaomi_r4a.yml
@@ -152,6 +152,8 @@ jobs:
         ./transfer cow --block 2621440 -s -p 64 --no-progress ${FIRMWARE} 2>&1 | tee cowtransfer.log
         echo "::warning file=cowtransfer.com::$(cat cowtransfer.log | grep https)"
         echo "url=$(cat cowtransfer.log | grep https | cut -f3 -d" ")"
+        cat url
+        echo "====End Upload firmware to conwtransfer==="
 
     - name: Upload firmware to WeTransfer
       id: wetransfer
@@ -161,6 +163,8 @@ jobs:
         ./transfer wet -s -p 16 --no-progress ${FIRMWARE} 2>&1 | tee wetransfer.log
         echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
         echo "url=$(cat wetransfer.log | grep https | cut -f3 -d" ")"  >> $GITHUB_ENV
+        cat $GITHUB_ENV
+        echo "====End Upload firmware to WeTransfer==="
 
     - name: Generate release tag
       id: tag
@@ -169,15 +173,19 @@ jobs:
         echo "== Time：$(date +'%Y-%m-%d %H:%M:%S') =="
         echo "release_tag=$(date +"%Y.%m.%d-%H%M%S")"  >> $GITHUB_ENV
         touch release.txt
-        #[ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
-        #[ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
+        [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
+        [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_ENV
         echo $GITHUB_ENV
+        cat release.txt
+        echo "====End Generate release tag===="
 
     - name: Check release tag
       run: |
         echo "========> check the release tag"
         echo $(steps.tag.outputs.status)
+        cat release.txt
+        echon "====End Check release tag==="
 
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v1
