--- a/r4a.config
+++ b/r4a.config
@@ -27,5 +27,5 @@ CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
 
 #============================== LuCI ==============================#
 # Applications
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus=y
+#CONFIG_PACKAGE_luci-app-adbyby-plus=y
+#CONFIG_PACKAGE_luci-app-ssr-plus=y
